--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
 # Godot 4+ specific ignores
 .godot/
+.nomedia
 /android/
+
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_credentials.cfg
+*.tmp
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
+
+# My specific ignores
 /Obsidian/
